Fix: fix dark mode text

--- a/src/index.css
+++ b/src/index.css
@@ -70,3 +70,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
+  }
+}
